--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1> Hellooo </h1>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1> Hellooo </h1>
 
-Redirecting to <a href="https://github.com/mahavirbha"> mahavirbha </a>
+    Redirecting to <a href="https://github.com/mahavirbha"> mahavirbha </a>
+  </body>
+</html>
